# CppInternshipApriorit

01Adapter/: CMakeLists.txt  cipheredLogger.cpp  cipheredLogger.hpp  cryptography.cpp  cryptography.hpp  logger.cpp  logger.hpp  main.cpp
01Mouse/: main.cpp  main2.cpp
02CodeReview/: Makefile  MyVector.hpp  MyVector0.hpp  MyVector99.hpp  main.cpp  main2.cpp
03ThreadPool/: Makefile  counter.cpp  main.cpp
04network/: Makefile  client.cpp  readme.md  server.cpp
05InterProcess/: Z_buftest.cpp  Z_toserver.txt  homework.md
05InterProcess/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
05InterProcess/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
06Resources/: main1.cpp  main2.cpp  main3.cpp
07modern/: main.cpp
08signals/build-counters-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  counters
08signals/build-counters-Desktop-Debug/.qt/: QtDeploySupport.cmake
08signals/build-counters-Desktop-Debug/counters_autogen/: deps
08signals/counters/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
09image/build-image-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  image
09image/image/: CMakeLists.txt  main.qml  mygrid.qml  mylist.qml  mypathview.qml  qml.qrc
10stl/: homework.md  main.cpp
11testing/: CMakeLists.txt  lib.hpp  main_test.cc  tdd.cpp  tdd.hpp
12Linux/task1/: Makefile  copying.cpp  copying.hpp  main.cpp
12Linux/task2/: Makefile  main.cpp
13macOS/: main.Swift
15reverse/: g5.exe.i64  hw.md  main.c
15reverse/task2/: a.out  main.cpp
(+197 files in other folders)
